--- a/Liner_Regression_on_puertorico_realEstate.ipynb
+++ b/Liner_Regression_on_puertorico_realEstate.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPbebXNHHkibTQoh5puOE+k"
+      "authorship_tag": "ABX9TyOBye7L968XOVxs37kBxZGL",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/lerapela/Liner_Regression_on_puertorico_realEstate/blob/main/Liner_Regression_on_puertorico_realEstate.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -1953,6 +1964,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Formula for the model:**\n",
+        "Price = -1827.513308881229 + 147.86352236774712 * house_size"
+      ],
+      "metadata": {
+        "id": "b8yfYvQE7yuC"
+      }
     },
     {
       "cell_type": "code",
